Fix box shadow on 3D hover covers

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -536,7 +536,7 @@
       transform: translateZ(25px);
       background-color: #01060f;
       border-radius: 0 2px 2px 0;
-      box-shadow: 5px 5px 20px #666;
+      box-shadow: 5px 5px 20px rgba(128,128,128,0.6);
       background-color: #01060f;
     }
 
@@ -585,6 +585,6 @@
       transform: translateZ(-25px);
       background-color: #01060f;
       border-radius: 0 2px 2px 0;
-      box-shadow: -10px 0 50px 10px #666;
+      box-shadow: -10px 0 50px 10px rgba(128,128,128,0.6);
     }
 		</style>
